--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
-<script src="scripts.js"></script>
+<script async src="scripts.js"></script>
 
 <header class="header">
     <a href="/" class="header__logo" aria-label="Яндекс.Дом"></a>
