--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
-<script async src="scripts.js"></script>
+<script defer src="scripts.js"></script>
 
 <header class="header">
     <a href="/" class="header__logo" aria-label="Яндекс.Дом"></a>
@@ -305,6 +305,5 @@
         © 1997–2022 ООО «Яндекс»
     </div>
 </footer>
-<script src="vendors/react-with-dom.js"></script>
 </body>
 </html>
