attempt to refactore code

--- a/index.html
+++ b/index.html
@@ -5,11 +5,10 @@
     <meta name="viewport"
           content="width=device-width, initial-scale=1.0">
     <title>Яндекс.Дом</title>
-    <link rel="stylesheet" type="text/css" href="reset.css">
+    <link async rel="stylesheet" type="text/css" href="reset.css">
     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
-<script defer src="scripts.js"></script>
 
 <header class="header">
     <a href="/" class="header__logo" aria-label="Яндекс.Дом"></a>
@@ -305,5 +304,6 @@
         © 1997–2022 ООО «Яндекс»
     </div>
 </footer>
+<script defer src="scripts.js"></script>
 </body>
 </html>
