--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Яндекс.Дом</title>
     <link async rel="stylesheet" type="text/css" href="reset.css">
     <link rel="stylesheet" type="text/css" href="styles.css">
+    <link href="mobile-styles.css" rel="stylesheet" media="screen and (max-width: 768px)">
+    <link href="tablet-styles.css" rel="stylesheet" media="screen and (max-width: 1024px)">
 </head>
 <body>
 
