split and refactoring scripts

--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta name="viewport"
           content="width=device-width, initial-scale=1.0">
     <title>Яндекс.Дом</title>
-    <link async rel="stylesheet" type="text/css" href="reset.css">
-    <link rel="stylesheet" type="text/css" href="styles.css">
-    <link href="mobile-styles.css" rel="stylesheet" media="screen and (max-width: 768px)">
-    <link href="tablet-styles.css" rel="stylesheet" media="screen and (max-width: 1024px)">
+    <link rel="stylesheet" type="text/css" href="reset.css" media="all">
+    <link rel="stylesheet" type="text/css" href="styles.css" media="all">
+    <link href="mobile-styles.css" rel="stylesheet" media="(max-width: 768px)">
+    <link href="tablet-styles.css" rel="stylesheet" media="(max-width: 1024px)">
 </head>
 <body>
 
@@ -306,6 +306,7 @@
         © 1997–2022 ООО «Яндекс»
     </div>
 </footer>
-<script defer src="scripts.js"></script>
+<script defer src="tabsScript.min.js"></script>
+<script defer src="menuScript.min.js"></script>
 </body>
 </html>
